# rt-core

./: .gitignore  Cargo.toml
src/: algorithm.rs  broker.rs  data.rs  error.rs  lib.rs  lob.rs  portfolio.rs  rtengine.rs  securities.rs  security.rs  time.rs  utils.rs
src/broker/: error.rs  fill.rs  orders.rs  slippage.rs
src/broker/fill/: engine.rs
src/broker/slippage/: simple_model.rs
src/data/: data-symbol-properties.csv  data_providers.rs  datafeed.rs  datamanger.rs  error.rs  fx_manager.rs  slice.rs  tradebars.rs
tests/: test_ondata_backtesting.rs  test_yahoo.rs
tests/data/: AAPL_yahoo.csv  AAPL_yahoo_reduced.csv
